# aed3-tp03

./: .gitignore  README.md
ej-1/: CMakeLists.txt  ej-1.cpp
ej-1/experimentacion/: CMakeLists.txt  experimento.cpp  experimento_ralo.cpp  experimento_ralo_small.cpp  generar_instancias.py  generar_instancias_ralas.py  graficos.py
ej-1/experimentacion/algoritmos/: trafico.h
ej-1/experimentacion/algoritmos/impl/: trafico-bellford.cpp  trafico-dijkstra-fast.cpp  trafico-dijkstra-queue.cpp  trafico-dijkstra-slow.cpp  trafico-djikstra-fast.cpp  trafico-djikstra-queue.cpp  trafico-djikstra-slow.cpp
ej-1/informe/: main.tex
ej-1/informe/files/: citations.bib  comandos_utiles.txt
ej-1/informe/files/src/: caratula.tex  experimentacion.tex  resumen.tex  trafico.tex
ej-1/informe/files/src/.code/: trafico.pseudo
ej-1/informe/files/src/.media/: grafo_ejemplo.py
ej-2/: CMakeLists.txt  ej-2.cpp
